--- a/serverless.yml
+++ b/serverless.yml
@@ -4,7 +4,9 @@ provider:
   name: aws
   runtime: nodejs20.x
   region: us-east-1
-  stage: dev
+  stage: prod
+  environment:
+    NODE_ENV: production
 
 functions:
   app:
