--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node": ">=20.0.0"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.974.0",
     "cors": "2.8.5",
     "dotenv": "17.2.1",
     "express": "5.1.0",
