--- a/serverless.yml
+++ b/serverless.yml
@@ -10,6 +10,8 @@ provider:
     DB_ENGINE: 'postgres'
     OPENAI_API_KEY: ''
     POSTGRES_DATABASE_URL: ''
+    EMAIL_SOURCE: ''
+    EMAIL_TOADDRESSES: ''
 
 functions:
   app:
